
set(DATA_STRUCTURES_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE PATH "Data Structures LIB Include Dir")
include_directories(${DATA_STRUCTURES_INCLUDE_DIR})

file(GLOB DATA_STRUCTURES_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/sources/*.cpp)
file(GLOB DATA_STRUCTURES_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)

add_library(data_structures SHARED ${DATA_STRUCTURES_SOURCES} ${DATA_STRUCTURES_HEADERS})

